--- a/frontend/about.html
+++ b/frontend/about.html
@@ -13,119 +13,8 @@
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
     <style>
-        /* Header Dropdown Styling */
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: 0;
-            background: var(--white);
-            min-width: 200px;
-            box-shadow: var(--shadow-lg);
-            border-radius: var(--radius-sm);
-            padding: 10px 0;
-            z-index: 100;
-        }
-
-        .dropdown-content a {
-            color: var(--primary) !important;
-            padding: 10px 20px;
-            display: block;
-            font-size: 0.9rem;
-        }
-
-        .dropdown-content a:hover {
-            background: var(--bg-light);
-            color: var(--secondary) !important;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-        header.scrolled .logo-text h2 {
-            color: var(--primary);
-        }
-
-        header.scrolled .mobile-menu-toggle {
-            color: var(--primary);
-        }
-
-        .mobile-menu-toggle {
-            display: none;
-            color: var(--white);
-            font-size: 1.5rem;
-            cursor: pointer;
-            transition: var(--transition);
-        }
-
-        .mobile-nav {
-            position: fixed;
-            top: 0;
-            right: -100%;
-            width: 80%;
-            max-width: 300px;
-            height: 100vh;
-            background: var(--white);
-            z-index: 2000;
-            padding: 30px;
-            box-shadow: -10px 0 30px rgba(0, 0, 0, 0.1);
-            transition: var(--transition);
-            display: flex;
-            flex-direction: column;
-        }
-
-        .mobile-nav.active {
-            right: 0;
-        }
-
-        .mobile-nav-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 40px;
-        }
-
-        .mobile-nav-header img {
-            height: 40px;
-        }
-
-        #mobile-close {
-            font-size: 1.5rem;
-            color: var(--primary);
-            cursor: pointer;
-        }
-
-        .mobile-nav-links {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        .mobile-nav-links a {
-            font-size: 1.1rem;
-            font-weight: 500;
-            color: var(--primary);
-            padding: 10px 0;
-            border-bottom: 1px solid #eee;
-        }
-
-        .mobile-nav-links a:last-child {
-            border-bottom: none;
-        }
-
-        @media (max-width: 1024px) {
-            .nav-links {
-                display: none;
-            }
-
-            .mobile-menu-toggle {
-                display: block !important;
-            }
-        }
-
         .about-hero {
-            background: linear-gradient(rgba(0, 35, 71, 0.8), rgba(0, 35, 71, 0.8)), url('assets/images/about-bg.jpg');
+            background: linear-gradient(rgba(0, 35, 71, 0.9), rgba(0, 35, 71, 0.8)), url('assets/images/about-bg.jpg');
             background-size: cover;
             background-position: center;
             padding: 150px 0 80px;
@@ -183,197 +72,89 @@
 </head>
 
 <body>
-    <header id="main-header">
-        <div class="container">
-            <div class="header-inner flex align-center justify-between">
-                <a href="index.html" class="logo flex align-center">
-                    <img src="assets/images/logo.png" alt="SVES Logo">
-                    <div class="logo-text" style="margin-left: 15px;">
-                        <h2 style="color: var(--white); font-size: 1.5rem; line-height: 1;">SVES College</h2>
-                        <span
-                            style="color: var(--secondary); font-size: 0.7rem; text-transform: uppercase; letter-spacing: 2px;">Harugeri</span>
+
+    <body>
+        <header id="main-header" class="fixed-top"></header>
+
+        <section class="about-hero">
+            <div class="container" data-aos="fade-up">
+                <h1>Our Legacy & Vision</h1>
+                <p>Providing quality higher education in rural Karnataka for over 4 decades.</p>
+            </div>
+        </section>
+
+        <section class="history-section bg-light">
+            <div class="container">
+                <div class="flex align-center justify-between" style="flex-wrap: wrap;">
+                    <div style="flex: 1; min-width: 300px;" data-aos="fade-right">
+                        <h2 class="section-title" style="text-align: left; transform: none; left: 0;">Our History</h2>
+                        <p style="margin-top: 20px; line-height: 1.8;">
+                            Shri Vrushabhendra Education Society (SVES) was founded in 1983 with a noble mission to
+                            bring
+                            quality education to the rural heartlands of Karnataka. Over the years, the institution has
+                            grown from a small educational initiative into a prestigious center for academic excellence.
+                        </p>
+                        <p style="margin-top: 15px; line-height: 1.8;">
+                            Our institution is reaccredited with an 'A' Grade by NAAC, reflecting our persistent
+                            commitment
+                            to maintaining the highest standards of teaching, research, and infrastructure.
+                        </p>
+
+                        <ul class="milestone-list">
+                            <li class="milestone-item">
+                                <span class="milestone-year">1983</span>
+                                <div>Establishment of SVES Society by visionary founders.</div>
+                            </li>
+                            <li class="milestone-item">
+                                <span class="milestone-year">1995</span>
+                                <div>Introduction of Bachelor of Computer Applications (BCA).</div>
+                            </li>
+                            <li class="milestone-item">
+                                <span class="milestone-year">2015</span>
+                                <div>NAAC 'A' Grade Accreditation received.</div>
+                            </li>
+                        </ul>
                     </div>
-                </a>
-
-                <nav class="nav-links">
-                    <a href="index.html">Home</a>
-                    <a href="about.html" class="active">About Us</a>
-                    <div class="dropdown" style="display: inline-block; position: relative;">
-                        <a href="javascript:void(0)">Academics <i class="fas fa-chevron-down"
-                                style="font-size: 0.7rem;"></i></a>
-                        <div class="dropdown-content">
-                            <a href="departments.html">Departments</a>
-                            <a href="courses.html">Courses</a>
-                            <a href="faculty.html">Faculty</a>
-                        </div>
-                    </div>
-                    <a href="student-corner.html">Student Corner</a>
-                    <a href="notes.html">Notes & Resources</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="admin/login.html">Admin Login</a>
-                    <a href="admissions.html" class="btn btn-secondary"
-                        style="padding: 8px 20px; color: var(--primary) !important;">Apply Now</a>
-                </nav>
-
-                <div class="mobile-menu-toggle" id="mobile-toggle">
-                    <i class="fas fa-bars"></i>
-                </div>
-            </div>
-        </div>
-
-        <!-- Mobile Navigation Drawer -->
-        <div class="mobile-nav" id="mobile-nav">
-            <div class="mobile-nav-header">
-                <img src="assets/images/logo.png" alt="SVES Logo">
-                <i class="fas fa-times" id="mobile-close"></i>
-            </div>
-            <div class="mobile-nav-links">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="departments.html">Departments</a>
-                <a href="courses.html">Courses</a>
-                <a href="faculty.html">Faculty</a>
-                <a href="student-corner.html">Student Corner</a>
-                <a href="notes.html">Notes & Resources</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="placements.html">Placements</a>
-                <a href="admin/login.html">Admin Login</a>
-                <a href="admissions.html" class="btn btn-secondary" style="margin-top: 20px; text-align: center;">Apply
-                    Now</a>
-            </div>
-        </div>
-    </header>
-
-    <section class="about-hero">
-        <div class="container" data-aos="fade-up">
-            <h1>Our Legacy & Vision</h1>
-            <p>Providing quality higher education in rural Karnataka for over 4 decades.</p>
-        </div>
-    </section>
-
-    <section class="history-section bg-light">
-        <div class="container">
-            <div class="flex align-center justify-between" style="flex-wrap: wrap;">
-                <div style="flex: 1; min-width: 300px;" data-aos="fade-right">
-                    <h2 class="section-title" style="text-align: left; transform: none; left: 0;">Our History</h2>
-                    <p style="margin-top: 20px; line-height: 1.8;">
-                        Shri Vrushabhendra Education Society (SVES) was founded in 1983 with a noble mission to bring
-                        quality education to the rural heartlands of Karnataka. Over the years, the institution has
-                        grown from a small educational initiative into a prestigious center for academic excellence.
-                    </p>
-                    <p style="margin-top: 15px; line-height: 1.8;">
-                        Our institution is reaccredited with an 'A' Grade by NAAC, reflecting our persistent commitment
-                        to maintaining the highest standards of teaching, research, and infrastructure.
-                    </p>
-
-                    <ul class="milestone-list">
-                        <li class="milestone-item">
-                            <span class="milestone-year">1983</span>
-                            <div>Establishment of SVES Society by visionary founders.</div>
-                        </li>
-                        <li class="milestone-item">
-                            <span class="milestone-year">1995</span>
-                            <div>Introduction of Bachelor of Computer Applications (BCA).</div>
-                        </li>
-                        <li class="milestone-item">
-                            <span class="milestone-year">2015</span>
-                            <div>NAAC 'A' Grade Accreditation received.</div>
-                        </li>
-                    </ul>
-                </div>
-                <div style="flex: 1; min-width: 300px; margin-left: 50px;" data-aos="fade-left">
-                    <img src="assets/images/campus-history.jpg" alt="Campus History"
-                        style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-lg);">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="section-padding">
-        <div class="container">
-            <div class="vision-mission-grid">
-                <div class="vm-card" data-aos="fade-up">
-                    <i class="fas fa-eye"></i>
-                    <h3>Our Vision</h3>
-                    <p>To be a premier institution of higher learning, transforming rural youth into globally
-                        competitive and morally upright citizens through quality education.</p>
-                </div>
-                <div class="vm-card" data-aos="fade-up" data-aos-delay="100">
-                    <i class="fas fa-bullseye"></i>
-                    <h3>Our Mission</h3>
-                    <p>To provide accessible, affordable, and high-quality education while fostering holistic
-                        development through professional training and community engagement.</p>
-                </div>
-                <div class="vm-card" data-aos="fade-up" data-aos-delay="200">
-                    <i class="fas fa-heart"></i>
-                    <h3>Core Values</h3>
-                    <p>Integrity, Excellence, Social Responsibility, and Continuous Innovation in all our academic and
-                        administrative pursuits.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-about">
-                    <h3>SVES College</h3>
-                    <p>Establishing excellence in higher education since 1983. Reaccredited with 'A' Grade by NAAC.</p>
-                    <div class="social-icons" style="margin-top: 20px;">
-                        <a href="#" style="margin-right: 15px; font-size: 1.2rem;"><i class="fab fa-facebook"></i></a>
-                        <a href="#" style="margin-right: 15px; font-size: 1.2rem;"><i class="fab fa-twitter"></i></a>
-                        <a href="#" style="margin-right: 15px; font-size: 1.2rem;"><i class="fab fa-instagram"></i></a>
-                        <a href="#" style="margin-right: 15px; font-size: 1.2rem;"><i class="fab fa-linkedin"></i></a>
+                    <div style="flex: 1; min-width: 300px; margin-left: 50px;" data-aos="fade-left">
+                        <img src="assets/images/campus-history.jpg" alt="Campus History"
+                            style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-lg);">
                     </div>
                 </div>
+            </div>
+        </section>
 
-                <div class="footer-links">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="admissions.html">Admissions</a></li>
-                        <li><a href="student-corner.html">Student Corner</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-links">
-                    <h3>Academics</h3>
-                    <ul>
-                        <li><a href="courses.html">Courses Offered</a></li>
-                        <li><a href="departments.html">Departments</a></li>
-                        <li><a href="faculty.html">Our Faculty</a></li>
-                        <li><a href="notes.html">Notes & Resources</a></li>
-                        <li><a href="placements.html">Placements</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-contact">
-                    <h3>Contact Us</h3>
-                    <p><i class="fas fa-map-marker-alt" style="color: var(--secondary); margin-right: 10px;"></i>
-                        Harugeri, Karnataka 591220</p>
-                    <p><i class="fas fa-phone"
-                            style="color: var(--secondary); margin-right: 10px; margin-top: 15px;"></i> +91 80507 86198
-                    </p>
-                    <p><i class="fas fa-envelope"
-                            style="color: var(--secondary); margin-right: 10px; margin-top: 15px;"></i>
-                        info@svescollege.in</p>
+        <section class="section-padding">
+            <div class="container">
+                <div class="vision-mission-grid">
+                    <div class="vm-card" data-aos="fade-up">
+                        <i class="fas fa-eye"></i>
+                        <h3>Our Vision</h3>
+                        <p>To be a premier institution of higher learning, transforming rural youth into globally
+                            competitive and morally upright citizens through quality education.</p>
+                    </div>
+                    <div class="vm-card" data-aos="fade-up" data-aos-delay="100">
+                        <i class="fas fa-bullseye"></i>
+                        <h3>Our Mission</h3>
+                        <p>To provide accessible, affordable, and high-quality education while fostering holistic
+                            development through professional training and community engagement.</p>
+                    </div>
+                    <div class="vm-card" data-aos="fade-up" data-aos-delay="200">
+                        <i class="fas fa-heart"></i>
+                        <h3>Core Values</h3>
+                        <p>Integrity, Excellence, Social Responsibility, and Continuous Innovation in all our academic
+                            and
+                            administrative pursuits.</p>
+                    </div>
                 </div>
             </div>
+        </section>
 
-            <div class="footer-bottom text-center">
-                <p>&copy; 2026 SVES College, Harugeri. All Rights Reserved. | <a href="admin/login.html"
-                        style="color: var(--secondary);">Admin Login</a></p>
-            </div>
-        </div>
-    </footer>
+        <footer id="main-site-footer"></footer>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>AOS.init({ duration: 800, once: true });</script>
-    <script src="assets/js/api.js"></script>
-    <script src="assets/js/main.js"></script>
-</body>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>AOS.init({ duration: 800, once: true });</script>
+        <script src="assets/js/api.js"></script>
+        <script src="assets/js/main.js"></script>
+    </body>
 
 </html>
