--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -13,120 +13,10 @@
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
     <style>
-        /* Header Dropdown Styling */
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            top: 100%;
-            left: 0;
-            background: var(--white);
-            min-width: 200px;
-            box-shadow: var(--shadow-lg);
-            border-radius: var(--radius-sm);
-            padding: 10px 0;
-            z-index: 100;
-        }
-
-        .dropdown-content a {
-            color: var(--primary) !important;
-            padding: 10px 20px;
-            display: block;
-            font-size: 0.9rem;
-        }
-
-        .dropdown-content a:hover {
-            background: var(--bg-light);
-            color: var(--secondary) !important;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-        header.scrolled .logo-text h2 {
-            color: var(--primary);
-        }
-
-        header.scrolled .mobile-menu-toggle {
-            color: var(--primary);
-        }
-
-        .mobile-menu-toggle {
-            display: none;
-            color: var(--white);
-            font-size: 1.5rem;
-            cursor: pointer;
-            transition: var(--transition);
-        }
-
-        .mobile-nav {
-            position: fixed;
-            top: 0;
-            right: -100%;
-            width: 80%;
-            max-width: 300px;
-            height: 100vh;
-            background: var(--white);
-            z-index: 2000;
-            padding: 30px;
-            box-shadow: -10px 0 30px rgba(0, 0, 0, 0.1);
-            transition: var(--transition);
-            display: flex;
-            flex-direction: column;
-        }
-
-        .mobile-nav.active {
-            right: 0;
-        }
-
-        .mobile-nav-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 40px;
-        }
-
-        .mobile-nav-header img {
-            height: 40px;
-        }
-
-        #mobile-close {
-            font-size: 1.5rem;
-            color: var(--primary);
-            cursor: pointer;
-        }
-
-        .mobile-nav-links {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        .mobile-nav-links a {
-            font-size: 1.1rem;
-            font-weight: 500;
-            color: var(--primary);
-            padding: 10px 0;
-            border-bottom: 1px solid #eee;
-        }
-
-        .mobile-nav-links a:last-child {
-            border-bottom: none;
-        }
-
-        @media (max-width: 1024px) {
-            .nav-links {
-                display: none;
-            }
-
-            .mobile-menu-toggle {
-                display: block !important;
-            }
-        }
-
         .notes-header {
-            background: linear-gradient(rgba(0, 35, 71, 0.9), rgba(0, 35, 71, 0.9)), url('assets/images/notes-bg.jpg');
+            background: linear-gradient(rgba(0, 35, 71, 0.9), rgba(0, 35, 71, 0.8)), url('assets/images/notes-bg.jpg');
             background-size: cover;
+            background-position: center;
             padding: 150px 0 80px;
             color: var(--white);
             text-align: center;
@@ -221,67 +111,7 @@
 </head>
 
 <body>
-    <!-- Include Navbar -->
-    <header id="main-header">
-        <div class="container">
-            <div class="header-inner flex align-center justify-between">
-                <a href="index.html" class="logo flex align-center">
-                    <img src="assets/images/logo.png" alt="SVES Logo">
-                    <div class="logo-text" style="margin-left: 15px;">
-                        <h2 style="color: var(--white); font-size: 1.5rem; line-height: 1;">SVES College</h2>
-                        <span
-                            style="color: var(--secondary); font-size: 0.7rem; text-transform: uppercase; letter-spacing: 2px;">Harugeri</span>
-                    </div>
-                </a>
-
-                <nav class="nav-links">
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About Us</a>
-                    <div class="dropdown" style="display: inline-block; position: relative;">
-                        <a href="javascript:void(0)">Academics <i class="fas fa-chevron-down"
-                                style="font-size: 0.7rem;"></i></a>
-                        <div class="dropdown-content">
-                            <a href="departments.html">Departments</a>
-                            <a href="courses.html">Courses</a>
-                            <a href="faculty.html">Faculty</a>
-                        </div>
-                    </div>
-                    <a href="student-corner.html">Student Corner</a>
-                    <a href="notes.html">Notes & Resources</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="admin/login.html">Admin Login</a>
-                    <a href="admissions.html" class="btn btn-secondary"
-                        style="padding: 8px 20px; color: var(--primary) !important;">Apply Now</a>
-                </nav>
-
-                <div class="mobile-menu-toggle" id="mobile-toggle">
-                    <i class="fas fa-bars"></i>
-                </div>
-            </div>
-        </div>
-
-        <!-- Mobile Navigation Drawer -->
-        <div class="mobile-nav" id="mobile-nav">
-            <div class="mobile-nav-header">
-                <img src="assets/images/logo.png" alt="SVES Logo">
-                <i class="fas fa-times" id="mobile-close"></i>
-            </div>
-            <div class="mobile-nav-links">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="departments.html">Departments</a>
-                <a href="courses.html">Courses</a>
-                <a href="faculty.html">Faculty</a>
-                <a href="student-corner.html">Student Corner</a>
-                <a href="notes.html">Notes & Resources</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="placements.html">Placements</a>
-                <a href="admin/login.html">Admin Login</a>
-                <a href="admissions.html" class="btn btn-secondary" style="margin-top: 20px; text-align: center;">Apply
-                    Now</a>
-            </div>
-        </div>
-    </header>
+    <header id="main-header" class="fixed-top"></header>
 
     <section class="notes-header">
         <div class="container">
@@ -327,70 +157,46 @@
 
         <div class="section-padding">
             <div class="notes-grid" id="notes-container">
-                <div class="empty-state">
-                    <i class="fas fa-spinner fa-spin" style="font-size: 3rem; color: var(--primary);"></i>
-                    <p style="margin-top: 20px;">Loading notes...</p>
+                <!-- Skeletons shown initially -->
+                <div class="skeleton-card">
+                    <div class="skeleton-text" style="width: 30%;"></div>
+                    <div class="skeleton-title"></div>
+                    <div class="skeleton-text"></div>
+                    <div class="skeleton-text"></div>
+                    <div class="skeleton-text" style="margin-bottom: 30px;"></div>
+                    <div class="flex">
+                        <div class="skeleton" style="height: 40px; flex: 1; margin-right: 10px;"></div>
+                        <div class="skeleton" style="height: 40px; flex: 1;"></div>
+                    </div>
+                </div>
+                <div class="skeleton-card">
+                    <div class="skeleton-text" style="width: 30%;"></div>
+                    <div class="skeleton-title"></div>
+                    <div class="skeleton-text"></div>
+                    <div class="skeleton-text"></div>
+                    <div class="skeleton-text" style="margin-bottom: 30px;"></div>
+                    <div class="flex">
+                        <div class="skeleton" style="height: 40px; flex: 1; margin-right: 10px;"></div>
+                        <div class="skeleton" style="height: 40px; flex: 1;"></div>
+                    </div>
+                </div>
+                <div class="skeleton-card">
+                    <div class="skeleton-text" style="width: 30%;"></div>
+                    <div class="skeleton-title"></div>
+                    <div class="skeleton-text"></div>
+                    <div class="skeleton-text"></div>
+                    <div class="skeleton-text" style="margin-bottom: 30px;"></div>
+                    <div class="flex">
+                        <div class="skeleton" style="height: 40px; flex: 1; margin-right: 10px;"></div>
+                        <div class="skeleton" style="height: 40px; flex: 1;"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-about">
-                    <h3>SVES College</h3>
-                    <p>Establishing excellence in higher education since 1983. Reaccredited with 'A' Grade by NAAC.</p>
-                    <div class="social-icons" style="margin-top: 20px;">
-                        <a href="#" style="margin-right: 15px; font-size: 1.2rem;"><i class="fab fa-facebook"></i></a>
-                        <a href="#" style="margin-right: 15px; font-size: 1.2rem;"><i class="fab fa-twitter"></i></a>
-                        <a href="#" style="margin-right: 15px; font-size: 1.2rem;"><i class="fab fa-instagram"></i></a>
-                        <a href="#" style="margin-right: 15px; font-size: 1.2rem;"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                </div>
-
-                <div class="footer-links">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="admissions.html">Admissions</a></li>
-                        <li><a href="student-corner.html">Student Corner</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-links">
-                    <h3>Academics</h3>
-                    <ul>
-                        <li><a href="courses.html">Courses Offered</a></li>
-                        <li><a href="departments.html">Departments</a></li>
-                        <li><a href="faculty.html">Our Faculty</a></li>
-                        <li><a href="notes.html">Notes & Resources</a></li>
-                        <li><a href="placements.html">Placements</a></li>
-                    </ul>
-                </div>
-
-                <div class="footer-contact">
-                    <h3>Contact Us</h3>
-                    <p><i class="fas fa-map-marker-alt" style="color: var(--secondary); margin-right: 10px;"></i>
-                        Harugeri, Karnataka 591220</p>
-                    <p><i class="fas fa-phone"
-                            style="color: var(--secondary); margin-right: 10px; margin-top: 15px;"></i> +91 80507 86198
-                    </p>
-                    <p><i class="fas fa-envelope"
-                            style="color: var(--secondary); margin-right: 10px; margin-top: 15px;"></i>
-                        info@svescollege.in</p>
-                </div>
-            </div>
-
-            <div class="footer-bottom text-center">
-                <p>&copy; 2026 SVES College, Harugeri. All Rights Reserved. | <a href="admin/login.html"
-                        style="color: var(--secondary);">Admin Login</a></p>
-            </div>
-        </div>
-    </footer>
+    <footer id="main-site-footer"></footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>AOS.init({ duration: 800, once: true });</script>
@@ -402,6 +208,21 @@
 
         async function loadNotes(filters = {}) {
             try {
+                // Show skeletons while loading
+                notesContainer.innerHTML = Array(3).fill(0).map(() => `
+                    <div class="skeleton-card">
+                        <div class="skeleton-text" style="width: 30%;"></div>
+                        <div class="skeleton-title"></div>
+                        <div class="skeleton-text"></div>
+                        <div class="skeleton-text"></div>
+                        <div class="skeleton-text" style="margin-bottom: 30px;"></div>
+                        <div class="flex">
+                            <div class="skeleton" style="height: 40px; flex: 1; margin-right: 10px;"></div>
+                            <div class="skeleton" style="height: 40px; flex: 1;"></div>
+                        </div>
+                    </div>
+                `).join('');
+
                 const params = new URLSearchParams();
                 if (filters.course) params.append('course', filters.course);
                 if (filters.semester) params.append('semester', filters.semester);
